feat(server): Add filter to task endpoint
